docker/k8s/play/adminer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: play
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.6.3
          ports:
            - containerPort: 8080
