docker/k8s/play/automation-bot-m13.yml

# NOTE: This depends on the service account stuff already existing that's set up by automation-bot-17.yaml
# This is just the deployment for the 2nd bot

apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-bot-m13
  namespace: play
  labels:
    app: automation-bot-m13
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: automation-bot-m13
  template:
    metadata:
      labels:
        app: automation-bot-m13
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-13
      serviceAccountName: automation-bot-service-account
      volumes:
        - name: nfs-play-m13
          hostPath:
            type: Directory
            path: /nfs/play/m13
        - name: nfs-old-backups
          hostPath:
            type: Directory
            path: /nfs/0_OLD_BACKUPS
        - name: nfs-archive
          hostPath:
            type: Directory
            path: /nfs/1_ARCHIVE
        - name: nfs-domain-shared
          hostPath:
            type: Directory
            path: /nfs/3_DOMAIN_SHARED/play
        - name: nfs-shared
          hostPath:
            type: Directory
            path: /nfs/4_SHARED
        - name: nfs-scratch
          hostPath:
            type: Directory
            path: /nfs/5_SCRATCH
        - name: secret-config
          secret:
            secretName: automation-bot-m13-config
      containers:
      - name: automation-bot
        image: ghcr.io/teammonumenta/monumenta-automation/monumenta-automation-bot-play
        tty: false
        stdin: false
        volumeMounts:
        - name: nfs-play-m13
          mountPath: /home/epic/play/m13
        - name: nfs-old-backups
          mountPath: /home/epic/0_OLD_BACKUPS
          # XXX NOTE
          # 1_ARCHIVE is deliberately not mounted into stage/volt automation bot
          # This is because part of running weekly test updates there is generating backup files
          # and currently those backups would overwrite play server backups made on the same day
          # If you change this to mount in 1_ARCHIVE, you must change the weekly update script as well
        - name: nfs-archive
          mountPath: /home/epic/1_ARCHIVE
        - name: nfs-domain-shared
          mountPath: /home/epic/3_DOMAIN_SHARED
        - name: nfs-shared
          mountPath: /home/epic/4_SHARED
        - name: nfs-scratch
          mountPath: /home/epic/5_SCRATCH
        - name: secret-config
          mountPath: /home/epic/.monumenta_bot
