docker/k8s/play/automation-bot.yml

# This is the actual bot's deployment, specifying what it should run
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-bot
  namespace: play
  labels:
    app: automation-bot
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: automation-bot
  template:
    metadata:
      labels:
        app: automation-bot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-8
      serviceAccountName: automation-bot-service-account
      volumes:
        - name: nfs-play-m8
          hostPath:
            type: Directory
            path: /nfs/play/project_epic
        - name: nfs-old-backups
          hostPath:
            type: Directory
            path: /nfs/0_OLD_BACKUPS
        - name: nfs-archive
          hostPath:
            type: Directory
            path: /nfs/1_ARCHIVE
        - name: nfs-shared
          hostPath:
            type: Directory
            path: /nfs/4_SHARED
        - name: secret-config
          secret:
            secretName: automation-bot-config
      containers:
      - name: automation-bot
        image: docker.pkg.github.com/teammonumenta/monumenta-automation/monumenta-automation-bot
        tty: false
        stdin: false
        volumeMounts:
        - name: nfs-play-m8
          mountPath: /home/epic/play/m8
        - name: nfs-old-backups
          mountPath: /home/epic/0_OLD_BACKUPS
        - name: nfs-archive
          mountPath: /home/epic/1_ARCHIVE
        - name: nfs-shared
          mountPath: /home/epic/4_SHARED
        - name: secret-config
          mountPath: /home/epic/.monumenta_bot
      imagePullSecrets:
      - name: githubcred
