docker/k8s/play/automation-bot2.yml

# NOTE: This depends on the service account stuff already existing that's set up by automation-bot.yaml
# This is just the deployment for the 2nd bot

apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-bot2
  namespace: play
  labels:
    app: automation-bot2
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: automation-bot2
  template:
    metadata:
      labels:
        app: automation-bot2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-11
      serviceAccountName: automation-bot-service-account
      volumes:
        - name: nfs-play
          hostPath:
            type: Directory
            path: /nfs/play
        - name: nfs-old-backups
          hostPath:
            type: Directory
            path: /nfs/0_OLD_BACKUPS
        - name: nfs-archive
          hostPath:
            type: Directory
            path: /nfs/1_ARCHIVE
        - name: nfs-shared
          hostPath:
            type: Directory
            path: /nfs/4_SHARED
        - name: secret-config
          secret:
            secretName: automation-bot2-config
      containers:
      - name: automation-bot
        image: docker.pkg.github.com/teammonumenta/monumenta-automation/monumenta-automation-bot
        tty: false
        stdin: false
        volumeMounts:
        - name: nfs-play
          mountPath: /home/epic/play
        - name: nfs-old-backups
          mountPath: /home/epic/0_OLD_BACKUPS
        - name: nfs-archive
          mountPath: /home/epic/1_ARCHIVE
        - name: nfs-shared
          mountPath: /home/epic/4_SHARED
        - name: secret-config
          mountPath: /home/epic/.monumenta_bot
      imagePullSecrets:
      - name: githubcred
