docker/k8s/play/bungee-15.yml
# Service / internal network ports

apiVersion: v1
kind: Service
metadata:
  name: bungee-15
  namespace: play
  labels:
    app: bungee-15
    k8s-app: monumenta-metrics
spec:
  type: ClusterIP
  selector:
    app: bungee-15
  ports:
  - name: metrics
    port: 9225
    targetPort: 9225

---

# Deployment / the actual running application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bungee-15
  namespace: play
  labels:
    app: bungee-15
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bungee-15
  template:
    metadata:
      labels:
        app: bungee-15
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-15
      volumes:
        - name: nfs-volume
          hostPath:
            path: /nfs/play/m15
            type: Directory
      containers:
      - name: bungee-15
        image: docker.pkg.github.com/teammonumenta/monumenta-automation/monumenta-java-shard-17
        tty: true
        stdin: true
        ports:
        # Primary Minecraft port
        - containerPort: 25566
          hostPort: 25565
          hostIP: "15.235.55.174" # The node's external facing IP address
        # Votifier
        - containerPort: 8192
          hostPort: 3333
          hostIP: "15.235.55.174" # The node's external facing IP address
        - containerPort: 9225
        readinessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 240
          timeoutSeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: nfs-volume
          mountPath: /home/epic/play/m15
        resources:
          limits:
            memory: 1Gi
            hugepages-2Mi: 4608Mi
          requests:
            memory: 64Mi
            hugepages-2Mi: 4608Mi
      imagePullSecrets:
      - name: githubcred
