docker/k8s/play/bungee-17.yml
# #
# # NOTE:
# # To generate the maps-auth secret, run these commands:
# # htpasswd -c ./auth plan
# # kubectl create secret generic plan-auth --from-file auth -n play
# # rm auth
# #
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: plan
#   namespace: play
#   annotations:
#     nginx.ingress.kubernetes.io/auth-type: basic
#     nginx.ingress.kubernetes.io/auth-secret: plan-auth
#     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
# spec:
#   tls:
#   - hosts:
#     - plan.playmonumenta.com
#   rules:
#   - host: plan.playmonumenta.com
#     http:
#       paths:
#       - backend:
#           serviceName: bungee
#           servicePort: 8804

---

# Service / internal network ports

apiVersion: v1
kind: Service
metadata:
  name: bungee-17
  namespace: play
  labels:
    app: bungee-17
    k8s-app: monumenta-metrics
spec:
  type: ClusterIP
  selector:
    app: bungee-17
  ports:
  - name: metrics
    port: 9225
    targetPort: 9225

---

# Deployment / the actual running application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bungee-17
  namespace: play
  labels:
    app: bungee-17
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bungee-17
  template:
    metadata:
      labels:
        app: bungee-17
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-17
      volumes:
        - name: nfs-volume
          hostPath:
            path: /nfs/play/m17
            type: Directory
      containers:
      - name: bungee-17
        image: ghcr.io/teammonumenta/monumenta-automation/monumenta-java-shard-17
        tty: true
        stdin: true
        ports:
        # Primary Minecraft port
        - containerPort: 25566
          hostPort: 25565
          hostIP: "15.235.84.119" # The node's external facing IP address
        # Votifier
        - containerPort: 8192
          hostPort: 3333
          hostIP: "15.235.84.119" # The node's external facing IP address
        - containerPort: 9225
        readinessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 240
          timeoutSeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: nfs-volume
          mountPath: /home/epic/play/m17
        resources:
          limits:
            memory: 1Gi
            hugepages-2Mi: 4608Mi
          requests:
            memory: 64Mi
            hugepages-2Mi: 4608Mi
