docker/k8s/play/velocity-12.yml



































# Service / internal network ports

apiVersion: v1
kind: Service
metadata:
  name: velocity-12
  namespace: play
  labels:
    app: velocity-12
    k8s-app: monumenta-metrics
spec:
  type: ClusterIP
  selector:
    app: velocity-12
  ports:



  - name: metrics
    port: 9225
    targetPort: 9225

---

# Deployment / the actual running application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: velocity-12
  namespace: play
  labels:
    app: velocity-12
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: velocity-12
  template:
    metadata:
      labels:
        app: velocity-12
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - monumenta-12
      volumes:
        - name: nfs-volume
          hostPath:
            path: /nfs/play/m12
            type: Directory
        - name: nfs-scratch
          hostPath:
            type: Directory
            path: /nfs/5_SCRATCH
      containers:
      - name: velocity-12
        image: ghcr.io/teammonumenta/monumenta-automation/monumenta-java-shard-21
        tty: true
        stdin: true
        ports:
        # Primary Minecraft port
        - containerPort: 25566
          hostPort: 25565
          hostIP: "141.94.75.9" # The node's external facing IP address
        # Votifier
        - containerPort: 8192
          hostPort: 3333
          hostIP: "141.94.75.9" # The node's external facing IP address
        - containerPort: 9225
        readinessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 25566
          initialDelaySeconds: 240
          timeoutSeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: nfs-volume
          mountPath: /home/epic/play/m12
        - name: nfs-scratch
          mountPath: /home/epic/5_SCRATCH
        resources:
          limits:
            cpu: "8"
            memory: 2608Mi
            hugepages-2Mi: 4608Mi
          requests:
            cpu: "1"
            memory: 2608Mi
            hugepages-2Mi: 4608Mi
      imagePullSecrets:
      - name: githubcred
